--- a/package.json
+++ b/package.json
@@ -14,19 +14,27 @@
     "dev": "next dev",
     "build": "next build",
     "analyze": "ANALYZE=true next build",
-    "start": "next start"
+    "start": "next start",
+    "server": "node server/index.js"
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.0.0",
     "@react-three/drei": "^9.92.7",
     "@react-three/fiber": "^8.15.12",
+    "@reduxjs/toolkit": "^2.8.2",
+    "express": "^5.1.0",
     "glsl-random": "^0.0.5",
+    "gsap": "^3.13.0",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.2.0",
     "three": "^0.160.0",
     "three-stdlib": "^2.28.9",
-    "tunnel-rat": "^0.1.2"
+    "tunnel-rat": "^0.1.2",
+    "ws": "^8.18.1",
+    "xstate": "^5.19.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^14.0.4",
