--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
     "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "three": "^0.160.0",
     "three-stdlib": "^2.28.9",
     "tunnel-rat": "^0.1.2",
