--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build": "next build",
     "analyze": "ANALYZE=true next build",
     "start": "next start",
-    "server": "node server/index.js"
+    "server": "node server/index.js",
+    "servprod": "node server/index.js -H 78.243.178.95"
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.0.0",
